loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: not found: value i
i=0
^LoopWhile:2: error: not found: value i
while (i=0) {avance();}
       ^LoopWhile:3: error: not found: value i
if (estFaceMur) {i=1}  
                 ^